# OOPlab4

./: .gitignore  CMakeLists.txt  readme.md
include/: Figure.hpp  Rectangle.hpp  Square.hpp  Triangle.hpp  array.hpp
src/: main.cpp
tests/: test.cpp
